; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/input/joystick/extr_turbografx.c_tgfx_close.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/input/joystick/extr_turbografx.c_tgfx_close.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.input_dev = type { i32 }
%struct.tgfx = type { i32, %struct.TYPE_2__*, i32, i32 }
%struct.TYPE_2__ = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.input_dev*)* @tgfx_close to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @tgfx_close(%struct.input_dev* %0) #0 {
  %2 = alloca %struct.input_dev*, align 8
  %3 = alloca %struct.tgfx*, align 8
  store %struct.input_dev* %0, %struct.input_dev** %2, align 8
  %4 = load %struct.input_dev*, %struct.input_dev** %2, align 8
  %5 = call %struct.tgfx* @input_get_drvdata(%struct.input_dev* %4)
  store %struct.tgfx* %5, %struct.tgfx** %3, align 8
  %6 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %7 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %6, i32 0, i32 0
  %8 = call i32 @mutex_lock(i32* %7)
  %9 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %10 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %9, i32 0, i32 3
  %11 = load i32, i32* %10, align 4
  %12 = add nsw i32 %11, -1
  store i32 %12, i32* %10, align 4
  %13 = icmp ne i32 %12, 0
  br i1 %13, label %28, label %14

14:                                               ; preds = %1
  %15 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %16 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %15, i32 0, i32 2
  %17 = call i32 @del_timer_sync(i32* %16)
  %18 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %19 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %18, i32 0, i32 1
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = call i32 @parport_write_control(i32 %22, i32 0)
  %24 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %25 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %24, i32 0, i32 1
  %26 = load %struct.TYPE_2__*, %struct.TYPE_2__** %25, align 8
  %27 = call i32 @parport_release(%struct.TYPE_2__* %26)
  br label %28

28:                                               ; preds = %14, %1
  %29 = load %struct.tgfx*, %struct.tgfx** %3, align 8
  %30 = getelementptr inbounds %struct.tgfx, %struct.tgfx* %29, i32 0, i32 0
  %31 = call i32 @mutex_unlock(i32* %30)
  ret void
}

declare dso_local %struct.tgfx* @input_get_drvdata(%struct.input_dev*) #1

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local i32 @del_timer_sync(i32*) #1

declare dso_local i32 @parport_write_control(i32, i32) #1

declare dso_local i32 @parport_release(%struct.TYPE_2__*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
